--- a/app/src/main/res/layout/bus_item.xml
+++ b/app/src/main/res/layout/bus_item.xml
@@ -80,9 +80,11 @@
             android:id="@+id/imageButton2"
             android:layout_width="15dp"
             android:layout_height="15dp"
+            android:padding="0dp"
             android:layout_alignParentEnd="true"
             android:backgroundTint="@color/transparent"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_settings"
-            app:tint="@color/light_gray"/>
+            app:tint="@color/light_gray" />
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
