--- a/app/src/main/res/menu/appbar_action.xml
+++ b/app/src/main/res/menu/appbar_action.xml
@@ -5,7 +5,8 @@
     <item
         android:id="@+id/search"
         android:title="search"
-        android:icon="@drawable/ic_launcher_foreground"
+        android:icon="@drawable/ic_search"
+        android:iconTint="@color/white"
         app:showAsAction="always"/>
 
     <item
