change edit text style

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -11,14 +11,16 @@
         android:layout_height="wrap_content"
         android:theme="@style/Theme.Bus.AppBarOverlay">
 
+<!--        TODO: Rxbinding-->
         <EditText
             android:id="@+id/editTextTextPersonName"
             android:layout_width="300dp"
-            android:layout_height="35dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:background="@drawable/edit_text_style"
-            android:layout_marginVertical="10dp"
-            android:paddingHorizontal="5dp"
+            android:layout_marginVertical="12dp"
+            android:paddingVertical="5dp"
+            android:paddingHorizontal="7dp"
             android:textColor="#686868"
             android:ems="10"
             android:textColorHint="#A6A6A6"
