--- a/app/src/main/res/drawable/edit_text_style.xml
+++ b/app/src/main/res/drawable/edit_text_style.xml
@@ -4,11 +4,7 @@
         <shape
             android:shape="rectangle" android:padding="10dp">
             <solid android:color="@color/white"/>
-            <corners
-                android:bottomRightRadius="15dp"
-                android:bottomLeftRadius="15dp"
-                android:topLeftRadius="15dp"
-                android:topRightRadius="15dp"/>
+            <corners android:radius="10dp"/>
         </shape>
     </item>
 </selector>
