--- a/app/src/main/res/layout/fragment_search_bus_item.xml
+++ b/app/src/main/res/layout/fragment_search_bus_item.xml
@@ -5,34 +5,32 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="20dp"
-    tools:context=".SearchBusStopItemFragment">
+    tools:context=".SearchBusItemFragment">
 
     <TextView
-        android:id="@+id/busStopName"
+        android:id="@+id/busName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:textSize="20sp"
+        android:text="603"
         android:textColor="@color/text_gray"
-        android:text="서대전역 입구" />
+        android:textSize="25sp" />
 
     <TextView
-        android:id="@+id/busStopId"
+        android:id="@+id/busArea"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/busStopName"
-        android:layout_marginTop="10dp"
-        android:paddingEnd="10dp"
-        android:text="21640"
-        android:textColor="@color/colorPrimary" />
+        android:layout_toEndOf="@+id/busName"
+        android:layout_alignBaseline="@+id/busName"
+        android:text="[ 대전 ]"
+        android:layout_marginStart="15dp" />
 
     <TextView
-        android:id="@+id/busStopLocation"
+        android:id="@+id/busRoute"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/busStopName"
+        android:layout_below="@id/busName"
         android:layout_marginTop="10dp"
-        android:layout_toEndOf="@id/busStopId"
-        android:text="쌍용예가아파트 방면" />
+        android:text="목원대학교 ⇆ 대전대학교" />
 
 </RelativeLayout>
