--- a/app/src/main/res/layout/bus_item.xml
+++ b/app/src/main/res/layout/bus_item.xml
@@ -28,8 +28,8 @@
             android:layout_toEndOf="@id/imageView"
             android:text="TextView"
             android:textColor="#4270fc"
-            android:textStyle="bold"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="wrap_content"
