--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="light_gray">#d4d4d4</color>
+    <color name="text_gray">#636363</color>
     <color name="transparent">#00000000</color>
 </resources>
