Change bus item

--- a/app/src/main/res/layout/bus_item.xml
+++ b/app/src/main/res/layout/bus_item.xml
@@ -12,13 +12,13 @@
 
         <ImageView
             android:id="@+id/imageView"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginHorizontal="10dp"
             app:srcCompat="@drawable/ic_bus"
-            app:tint="#3f46d1" />
+            app:tint="@color/colorPrimary" />
 
         <TextView
             android:id="@+id/textBusNumber"
@@ -27,7 +27,7 @@
             android:layout_marginTop="10dp"
             android:layout_toEndOf="@id/imageView"
             android:text="TextView"
-            android:textColor="#4270fc"
+            android:textColor="@color/colorPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -60,14 +60,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/imageButton"
+            android:layout_toStartOf="@id/notificationButton"
             android:layout_marginEnd="5dp"
             android:text="TextView"
             android:textSize="15sp"
             android:textStyle="bold" />
 
         <ImageButton
-            android:id="@+id/imageButton"
+            android:id="@+id/notificationButton"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_centerVertical="true"
