--- a/app/src/main/res/layout/fragment_search_bus_item.xml
+++ b/app/src/main/res/layout/fragment_search_bus_item.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:padding="20dp"
     tools:context=".SearchBusItemFragment">
 
