--- a/app/src/main/res/layout/fragment_search_bus_stop_item.xml
+++ b/app/src/main/res/layout/fragment_search_bus_stop_item.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="100dp"
     android:orientation="horizontal"
+    android:gravity="center_vertical"
     android:padding="20dp"
     tools:context=".SearchBusStopItemFragment">
 
@@ -12,9 +13,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:textSize="20sp"
+        android:text="대전테크노파크"
         android:textColor="@color/text_gray"
-        android:text="서대전역 입구" />
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/busStopId"
@@ -23,7 +24,7 @@
         android:layout_below="@id/busStopName"
         android:layout_marginTop="10dp"
         android:paddingEnd="10dp"
-        android:text="21640"
+        android:text="20270"
         android:textColor="@color/colorPrimary" />
 
     <TextView
@@ -33,6 +34,6 @@
         android:layout_below="@id/busStopName"
         android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/busStopId"
-        android:text="쌍용예가아파트 방면" />
+        android:text="대전준법지원센터 방면" />
 
 </RelativeLayout>
