--- a/app/src/main/res/layout/fragment_search_bus_item.xml
+++ b/app/src/main/res/layout/fragment_search_bus_item.xml
@@ -13,7 +13,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
-        android:text="603"
         android:textColor="@color/text_gray"
         android:textSize="25sp" />
 
@@ -23,7 +22,6 @@
         android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/busName"
         android:layout_alignBaseline="@+id/busName"
-        android:text="[ 대전 ]"
         android:layout_marginStart="15dp" />
 
     <TextView
@@ -31,7 +29,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/busName"
-        android:layout_marginTop="10dp"
-        android:text="목원대학교 ⇆ 대전대학교" />
+        android:layout_marginTop="10dp" />
 
 </RelativeLayout>
