--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -7,7 +7,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.main.PlaceholderFragment"
-    app:layoutManager="LinearLayoutManager"
-    tools:listitem="@layout/fragment_search_bus_stop_item">
+    app:layoutManager="LinearLayoutManager" >
 
 </androidx.recyclerview.widget.RecyclerView>
