--- a/app/src/main/res/layout/activity_bus_stop.xml
+++ b/app/src/main/res/layout/activity_bus_stop.xml
@@ -53,7 +53,7 @@
                 app:srcCompat="@drawable/ic_location" />
 
             <ImageButton
-                android:id="@+id/bookMarkButton"
+                android:id="@+id/busStopBookMarkButton"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/circle_button_style"
@@ -77,6 +77,7 @@
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/busArrivalRecyclerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
