--- a/app/src/main/res/layout/arrival_bus_item.xml
+++ b/app/src/main/res/layout/arrival_bus_item.xml
@@ -7,38 +7,75 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingVertical="15dp"
+        android:paddingHorizontal="15dp"
         android:orientation="horizontal"
         app:layout_constraintTop_toTopOf="parent">
 
-        <ImageButton
-            android:id="@+id/imageButton"
+        <TextView
+            android:id="@+id/busName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="5dp"
+            android:text="318"
+            android:textSize="22sp" />
+
+        <TextView
+            android:id="@+id/busType"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toEndOf="@id/busName"
+            android:background="@drawable/bus_type_radius"
+            android:text="간선버스" />
+
+        <TextView
+            android:id="@+id/leftStops"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/divideLine"
+            android:text="4번째 전" />
+
+        <TextView
+            android:id="@+id/divideLine"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginHorizontal="5dp"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/arrivalTime"
+            android:text="|" />
+
+        <TextView
+            android:id="@+id/arrivalTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="10dp"
+            android:layout_toStartOf="@id/busBookMarkButton"
+            android:textSize="17sp"
+            android:text="18분" />
+
+        <ImageButton
+            android:id="@+id/busBookMarkButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_toStartOf="@id/alarmButton"
+            android:background="@color/transparent"
             app:srcCompat="@drawable/ic_empty_star" />
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TextView" />
+        <ImageButton
+            android:id="@+id/alarmButton"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:scaleType="centerInside"
+            android:layout_alignParentEnd="true"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent"
+            app:srcCompat="@drawable/ic_bell" />
 
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
