Fix primary color

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -9,6 +9,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@drawable/toolbar_gradient"
         android:theme="@style/Theme.Bus.AppBarOverlay">
 
 <!--        TODO: Rxbinding-->
@@ -33,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            app:tabIndicatorColor="@color/colorPrimary"
+            app:tabIndicatorColor="@color/colorPrimaryVariant"
             app:tabSelectedTextColor="@color/colorPrimary"
             app:tabTextColor="#7E7E7E" />
 
