--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#4270fc</color>
-    <color name="colorPrimaryVariant">#1c54ff</color>
-    <color name="colorAccent">#a1b8ff</color>
+    <color name="colorPrimary">#00DCAD</color>
+    <color name="colorPrimaryVariant">#64e8c7</color>
+    <color name="colorAccent">#acf2e0</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -10,6 +10,9 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="status_bar_color1">#9900DCAD</color>
+    <color name="status_bar_color2">#9989DBEF</color>
+    <color name="sky_blue">#89DBEF</color>
     <color name="light_gray">#d4d4d4</color>
     <color name="text_gray">#636363</color>
     <color name="transparent">#00000000</color>
