--- a/app/src/main/res/layout/arrival_bus_item.xml
+++ b/app/src/main/res/layout/arrival_bus_item.xml
@@ -19,6 +19,7 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
+            android:textColor="@color/color_primary_text"
             android:textSize="22sp" />
 
         <TextView
