--- a/app/src/main/res/layout/activity_bus_stop.xml
+++ b/app/src/main/res/layout/activity_bus_stop.xml
@@ -11,38 +11,45 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/busStopName"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="15dp"
-            android:paddingVertical="10dp"
-            android:textSize="20sp"
-            android:textColor="@color/text_gray"
-            android:textAlignment="center" />
+            android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/busStopId"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="8dp"
-            android:textColor="@color/text_gray"
-            android:textAlignment="center" />
+            <TextView
+                android:id="@+id/busStopName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:paddingVertical="10dp"
+                android:textAlignment="center"
+                android:textColor="@color/text_gray"
+                android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/busStopLocation"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:paddingVertical="8dp"
-            android:textColor="@color/text_gray"
-            android:textAlignment="center" />
+            <TextView
+                android:id="@+id/busStopId"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="8dp"
+                android:textAlignment="center"
+                android:textColor="@color/text_gray" />
+
+            <TextView
+                android:id="@+id/busStopLocation"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="8dp"
+                android:textAlignment="center"
+                android:textColor="@color/text_gray" />
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingVertical="10dp"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp"
+            android:paddingVertical="10dp">
 
             <ImageButton
                 android:id="@+id/locationButton"
@@ -64,7 +71,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/light_gray"
+            android:background="@drawable/horizontal_gradient_style"
             android:orientation="vertical">
 
             <TextView
@@ -72,8 +79,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="10dp"
-                android:textColor="@color/white"
-                android:text="버스" />
+                android:text="버스"
+                android:textColor="@color/white" />
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
