--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -43,15 +43,16 @@
             android:layout_marginTop="15dp"
             android:background="@drawable/radius_gradient_style"
             android:orientation="horizontal"
-            android:padding="2dp">
+            android:layout_marginBottom="30dp">
 
             <TextView
                 android:id="@+id/busStartStop"
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="match_parent"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="10dp"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:onClick="upBus"/>
 
             <LinearLayout
                 android:layout_width="2dp"
@@ -61,13 +62,20 @@
 
             <TextView
                 android:id="@+id/busEndStop"
-                android:layout_width="120dp"
+                android:layout_width="140dp"
                 android:layout_height="match_parent"
                 android:paddingHorizontal="20dp"
                 android:paddingVertical="10dp"
-                android:textAlignment="center" />
+                android:textAlignment="center"
+                android:text="목원대 방향"
+                android:onClick="downBus"/>
 
         </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/busRouteRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
