--- a/app/src/main/res/drawable/circle_button_style.xml
+++ b/app/src/main/res/drawable/circle_button_style.xml
@@ -3,10 +3,7 @@
     android:color="#ffffff">
     <item>
         <shape android:shape="oval">
-            <solid android:color="@color/transparent"/>
-            <stroke
-                android:color="@color/light_gray"
-                android:width="1dp"/>
+            <solid android:color="@color/white"/>
             <padding
                 android:top="4dp"
                 android:bottom="4dp"
