--- a/app/src/main/res/layout/activity_bus.xml
+++ b/app/src/main/res/layout/activity_bus.xml
@@ -12,70 +12,81 @@
         android:orientation="vertical"
         app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/busName_activity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="40dp"
-            android:textAlignment="center"
-            android:textSize="25sp" />
-
-        <TextView
-            android:id="@+id/busArea_activity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:text="대전"
-            android:textAlignment="center" />
-
-        <TextView
-            android:id="@+id/busType_activity"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
-            android:textAlignment="center" />
-
         <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/radius_gradient_style"
-            android:orientation="horizontal"
-            android:layout_marginBottom="30dp">
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/horizontal_gradient_style"
+            android:orientation="vertical">
 
             <TextView
-                android:id="@+id/busStartStop"
-                android:layout_width="140dp"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="5dp"
-                android:paddingVertical="10dp"
-                android:gravity="center"
-                android:textColor="#01C8C1"
-                android:onClick="upBus"/>
+                android:id="@+id/busArea_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:text="대전"
+                android:textColor="@color/white"
+                android:textAlignment="center" />
+
+            <TextView
+                android:id="@+id/busName_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="25sp" />
+
+            <TextView
+                android:id="@+id/busType_activity"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:textColor="@color/white"
+                android:textAlignment="center" />
 
             <LinearLayout
-                android:layout_width="2dp"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:background="@drawable/vertical_gradient_style"
-                android:orientation="vertical" />
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:layout_marginBottom="30dp"
+                android:background="@drawable/white_radius_style"
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/busEndStop"
-                android:layout_width="140dp"
-                android:layout_height="match_parent"
-                android:paddingHorizontal="5dp"
-                android:paddingVertical="10dp"
-                android:gravity="center"
-                android:onClick="downBus"/>
+                <TextView
+                    android:id="@+id/busStartStop"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="10dp"
+                    android:gravity="center"
+                    android:textColor="#01C8C1"
+                    android:onClick="upBus"/>
+
+                <LinearLayout
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/light_gray"
+                    android:orientation="vertical" />
+
+                <TextView
+                    android:id="@+id/busEndStop"
+                    android:layout_width="140dp"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:onClick="downBus"
+                    android:paddingHorizontal="5dp"
+                    android:paddingVertical="10dp" />
+
+            </LinearLayout>
 
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/busRouteRecyclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layoutManager="LinearLayoutManager"/>
+            android:layout_height="match_parent"
+            app:layoutManager="LinearLayoutManager" />
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
