--- a/app/src/main/res/layout/activity_bus_stop.xml
+++ b/app/src/main/res/layout/activity_bus_stop.xml
@@ -14,25 +14,25 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@drawable/horizontal_gradient_style"
             android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/busStopName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:paddingVertical="10dp"
-                android:textAlignment="center"
-                android:textColor="@color/text_gray"
-                android:textSize="20sp" />
 
             <TextView
                 android:id="@+id/busStopId"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="8dp"
+                android:layout_marginTop="40dp"
                 android:textAlignment="center"
-                android:textColor="@color/text_gray" />
+                android:textColor="@color/white" />
+
+            <TextView
+                android:id="@+id/busStopName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:paddingVertical="10dp"
+                android:textAlignment="center"
+                android:textColor="@color/white"
+                android:textSize="22sp" />
 
             <TextView
                 android:id="@+id/busStopLocation"
@@ -40,47 +40,31 @@
                 android:layout_height="wrap_content"
                 android:paddingVertical="8dp"
                 android:textAlignment="center"
-                android:textColor="@color/text_gray" />
-        </LinearLayout>
+                android:textColor="@color/white" />
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_marginBottom="10dp"
-            android:paddingVertical="10dp">
-
-            <ImageButton
-                android:id="@+id/locationButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="14dp"
-                android:background="@drawable/circle_button_style"
-                app:srcCompat="@drawable/ic_location" />
-
-            <ImageButton
-                android:id="@+id/busStopBookMarkButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@drawable/circle_button_style"
-                app:srcCompat="@drawable/ic_star" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@drawable/horizontal_gradient_style"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:text="버스"
-                android:textColor="@color/white" />
+                android:layout_marginBottom="10dp"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:paddingVertical="10dp">
+
+                <ImageButton
+                    android:id="@+id/locationButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="14dp"
+                    android:background="@drawable/circle_button_style"
+                    app:srcCompat="@drawable/ic_location" />
+
+                <ImageButton
+                    android:id="@+id/busStopBookMarkButton"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/circle_button_style"
+                    app:srcCompat="@drawable/ic_star" />
+            </LinearLayout>
         </LinearLayout>
 
         <androidx.recyclerview.widget.RecyclerView
