--- a/app/src/main/res/layout/bus_route_item.xml
+++ b/app/src/main/res/layout/bus_route_item.xml
@@ -7,7 +7,6 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -15,20 +14,21 @@
 
         <ImageView
             android:id="@+id/arrow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="20dp"
+            android:layout_height="60dp"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="15dp"
-            app:srcCompat="@drawable/ic_arrow_down" />
+            app:srcCompat="@drawable/route_direction" />
 
         <TextView
             android:id="@+id/busStopNameRoute"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/arrow"
+            android:layout_marginTop="10dp"
             android:layout_marginBottom="5dp"
+            android:layout_toEndOf="@+id/arrow"
             android:textSize="17sp" />
 
         <TextView
