Modify gradient color

--- a/app/src/main/res/drawable/horizontal_gradient_style.xml
+++ b/app/src/main/res/drawable/horizontal_gradient_style.xml
@@ -4,6 +4,6 @@
 
     <gradient
         android:angle="180"
-        android:endColor="@color/colorAccent"
+        android:endColor="@color/colorPrimary"
         android:startColor="@color/sky_blue" />
 </shape>
