--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -4,31 +4,52 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:fitsSystemWindows="true"
     tools:context=".SearchActivity">
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/horizontal_gradient_style"
+        android:background="@color/white"
+        android:gravity="center_horizontal"
         android:theme="@style/Theme.Bus.AppBarOverlay">
 
-<!--        TODO: Rxbinding-->
-        <EditText
-            android:id="@+id/searchBox"
-            android:layout_width="300dp"
+        <RelativeLayout
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/white_radius_style"
-            android:layout_marginVertical="12dp"
-            android:paddingVertical="5dp"
-            android:paddingHorizontal="7dp"
-            android:textColor="#686868"
-            android:ems="10"
-            android:textColorHint="#A6A6A6"
-            android:hint="@string/edit_text_hint"
-            android:inputType="textPersonName"
-            android:autofillHints="no" />
+            android:orientation="horizontal">
+
+            <EditText
+                android:id="@+id/searchBox"
+                android:layout_width="350dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="15dp"
+                android:autofillHints="no"
+                android:background="@drawable/gray_radius_style"
+                android:drawableStart="@drawable/ic_search"
+                android:drawableTint="@color/light_gray"
+                android:ems="10"
+                android:hint="@string/edit_text_hint"
+                android:inputType="textPersonName"
+                android:paddingHorizontal="7dp"
+                android:paddingVertical="5dp"
+                android:textColor="@color/text_gray"
+                android:textColorHint="#A6A6A6" />
+
+            <ImageButton
+                android:id="@+id/cancel_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentRight="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginRight="5dp"
+                android:background="@color/transparent"
+                android:src="@drawable/ic_cancel"
+                app:tint="@color/light_gray" />
+
+        </RelativeLayout>
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabs"
