--- a/app/src/main/res/layout/arrival_bus_item.xml
+++ b/app/src/main/res/layout/arrival_bus_item.xml
@@ -7,9 +7,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingVertical="15dp"
-        android:paddingHorizontal="15dp"
         android:orientation="horizontal"
+        android:paddingHorizontal="15dp"
+        android:paddingVertical="15dp"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
@@ -19,7 +20,6 @@
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
-            android:textColor="@color/color_primary_text"
             android:textSize="22sp" />
 
         <TextView
@@ -28,51 +28,59 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_toEndOf="@id/busName"
-            android:background="@drawable/bus_type_radius" />
+            android:background="@drawable/bus_type_radius_style"
+            android:paddingHorizontal="5dp"
+            android:paddingVertical="2dp"
+            android:textColor="@color/white"
+            android:textSize="11sp" />
+
 
         <TextView
             android:id="@+id/leftStops"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/divideLine" />
+            android:layout_toStartOf="@id/divideLine"
+            android:textSize="12sp"/>
 
-        <TextView
+        <View
             android:id="@+id/divideLine"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="5dp"
+            android:layout_width="1dp"
+            android:layout_height="13dp"
             android:layout_centerVertical="true"
+            android:layout_marginHorizontal="4dp"
+            android:layout_marginVertical="3.5dp"
             android:layout_toStartOf="@id/arrivalTime"
-            android:text="|" />
+            android:background="@color/light_gray" />
 
         <TextView
             android:id="@+id/arrivalTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:layout_marginRight="10dp"
-            android:layout_toStartOf="@id/busBookMarkButton"
-            android:textSize="17sp" />
+            android:layout_marginRight="15dp"
+            android:layout_toStartOf="@id/imgbtn_bus_bookmark"
+            android:textSize="16sp"/>
 
         <ImageButton
-            android:id="@+id/busBookMarkButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:id="@+id/imgbtn_bus_bookmark"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_centerVertical="true"
-            android:layout_toStartOf="@id/alarmButton"
             android:layout_marginEnd="5dp"
+            android:layout_toStartOf="@id/alarmButton"
             android:background="@color/transparent"
-            app:srcCompat="@drawable/ic_empty_star" />
+            android:scaleType="fitCenter"
+            android:src="@drawable/ic_empty_star" />
 
         <ImageButton
             android:id="@+id/alarmButton"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:scaleType="centerInside"
+            android:layout_width="23dp"
+            android:layout_height="23dp"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
             android:background="@color/transparent"
+            android:scaleType="centerInside"
             app:srcCompat="@drawable/ic_bell" />
 
     </RelativeLayout>
