--- a/app/src/main/res/layout/main_bus_loading_item.xml
+++ b/app/src/main/res/layout/main_bus_loading_item.xml
@@ -63,27 +63,9 @@
 
                 </LinearLayout>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/tv_predict_time_mainbusitem"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="6분"
-                        android:textSize="16sp" />
-
-                    <TextView
-                        android:id="@+id/tv_left_stops_mainbusitem"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginStart="3dp"
-                        android:text="3번째 전"
-                        android:textColor="@color/text_light_gray"
-                        android:textSize="13sp" />
-                </LinearLayout>
+                <ProgressBar
+                    android:layout_width="20dp"
+                    android:layout_height="20dp" />
 
             </LinearLayout>
 
