--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#00DCAD</color>
-    <color name="colorPrimaryVariant">#64e8c7</color>
-    <color name="colorAccent">#acf2e0</color>
+    <color name="colorPrimary">#5983f1</color>
+    <color name="colorPrimaryVariant">#7fa5f8</color>
+    <color name="colorAccent">#c3d6ff</color>
     <color name="purple_200">#FFBB86FC</color>
     <color name="purple_500">#FF6200EE</color>
     <color name="purple_700">#FF3700B3</color>
@@ -13,8 +13,14 @@
     <color name="status_bar_color1">#9900DCAD</color>
     <color name="status_bar_color2">#9989DBEF</color>
     <color name="sky_blue">#89DBEF</color>
-    <color name="color_primary_text">#01C89D</color>
+    <color name="color_primary_text">#5983f1</color>
     <color name="light_gray">#d4d4d4</color>
     <color name="text_gray">#636363</color>
+    <color name="text_light_gray">#979797</color>
+    <color name="blue_gray_icon">#767F98</color>
+    <color name="bus_red">#E66A6A</color>
+    <color name="bus_blue">#6D99E1</color>
+    <color name="bus_green">#62BD80</color>
+    <color name="bus_yellow">#FFBE3B</color>
     <color name="transparent">#00000000</color>
 </resources>
